# BOFuzz

./: .gitignore  Cargo.toml  README.md
bindings/pylibafl/: Cargo.toml
eval/src/: fun_eval_coverage.py  thermodynamic_statistics.py
eval/statistics/: bloaty_fuzz_target_statistics.json  curl_curl_fuzzer_http_statistics.json  freetype2_ftfuzzer_statistics.json  harfbuzz_hb-shape-fuzzer_statistics.json  lcms_cms_transform_fuzzer_statistics.json  mbedtls_fuzz_dtlsclient_statistics.json  openthread_ot-ip6-send-fuzzer_statistics.json  proj4_proj_crs_to_crs_fuzzer_statistics.json  re2_fuzzer_statistics.json  sqlite3_ossfuzz_statistics.json  vorbis_decode_fuzzer_statistics.json  zlib_zlib_uncompress_fuzzer_statistics.json
example/: zlib_uncompress_demo.sh  zlib_uncompress_fuzzer_features_map.json
fuzzers/inprocess/bofuzz/: Cargo.toml  README.md
fuzzers/inprocess/bofuzz/src/: custom_monitor.rs  lib.rs
fuzzers/inprocess/libfun/: Cargo.toml  stub_rt.c
fuzzers/inprocess/libfun/src/: custom_monitor.rs  lib.rs
fuzzers/inprocess/libfun/src/feature_sched/: accounting_stage.rs  factor.rs  features_map.rs  metadata.rs  mod.rs  power_stage.rs  sancov_index_feedback.rs  scorer.rs  stats.rs  tpe.rs  tpe_stage.rs
libafl/: Cargo.toml
libafl/src/schedulers/: mod.rs  testcase_score.rs  weighted.rs
libafl_bolts/: Cargo.toml
libafl_frida/: Cargo.toml
libafl_intelpt/: Cargo.toml
libafl_qemu/: Cargo.toml
libafl_targets/: Cargo.toml
scripts/: copy_features_maps.py
static_analysis/: features_extractor.py  features_schema.json
(+15 files in other folders)
